Increase font-size lower bound, change square input animation to prevent flow issues on mobile

--- a/client/src/components/Menu.module.css
+++ b/client/src/components/Menu.module.css
@@ -67,12 +67,7 @@
 
   .icon {
     height: 1.4rem;
-    margin: 0;
-  }
-
-  .help {
-    margin-left: 0.2rem;
-    margin-right: 0.5rem;
+    margin: 0 0.5rem 0 0;
   }
 
   .numPuzzlesFound {
