--- a/client/src/index.css
+++ b/client/src/index.css
@@ -28,7 +28,7 @@ html {
   font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
     'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  font-size: clamp(0.75rem, 0.1rem + 1.2vw, 2rem);
+  font-size: clamp(0.95rem, 0.1rem + 1.2vw, 2rem);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
